@@ -1,3 +1,7 @@
+2004-06-10  Caleb Moore <c.moore@student.unsw.edu.au>
+	
+	* rsvg-paint-server.c: fixed all known pattern geometry problems
+
 2004-06-09  Dodji Seketeli  <dodji@gnome.org>
 
 	* configure.in: several versions of libcroco can now be
